remodif de sql fichier

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<a class="nav-link" href="#Inscription">Inscription</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#Contact">Contact</a>
+				<a class="nav-link" href="Contact.html">Contact</a>
 			</li>
 
 			<li class="nav-item">
@@ -57,35 +57,15 @@
 	   </div>
    </div>
    <div class="caption text-center" >
-	   <h1>Bienvenu à la Brocante de Kirchheim</h1>
+	   <h1>Bienvenue à la Brocante de Kirchheim</h1>
 	   <h3> le coin des bonnes affaires</h3>
 	   <a class="btn btn-outline-light btn-lg" href="#here" >Par ici</a>
    </div>
 <!--- end of Landing Page -->
-<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-	<div class="carousel-inner">
-	  <div class="carousel-item active">
-		<img src="images/istock.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="images/marche.jpg" class="d-block w-100" alt="...">
-	  </div>
-	  <div class="carousel-item">
-		<img src="images/Montre.jpg" class="d-block w-100" alt="...">
-	  </div>
-	</div>
-	<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
-	  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-	  <span class="visually-hidden">Previous</span>
-	</a>
-	<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next">
-	  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-	  <span class="visually-hidden">Next</span>
-	</a>
-  </div>
+
 </div>
 <!--- end home section -->
-      
+
 
 <!--- End Course Section -->
 
