--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>La Page Accueil</title>
+	<title>La Page Accueil </title>
 	<link rel="stylesheet" href="bootstrap-4.1.3-dist/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="css/fixed.css">
@@ -11,7 +11,7 @@
 
 <body data-spy = "scroll" data-target ="#navbarResponsive">
 
-<!--- home section -->
+<!--- home section   section -->
 <div id="home">
 <!--- navbar section -->
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top"  >
