--- a/Contact.html
+++ b/Contact.html
@@ -10,41 +10,7 @@
   
 </head>
 <body>
-	<header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top"  >
-      <a class="navbar-brand" href="#">
-      <img src="img/logob.jpg" >
-   </a> 
-   <button class="navbar-toggeler" type="button" data-toggle="collapse"
-   data-target="#navbarResponsive"> 
-   <span class="navbar-toggeler-icon"></span>
- </button>
- <div class="collapse navbar-collapse" id="navbarResponsive">
-   <ul class="navbar-nav ml-auto">
-     <li class="nav-item">
-       <a class="nav-link" href="#Accueil">Accueil</a>
-     </li>
-     <li class="nav-item">
-       <a class="nav-link" href="#About">About</a>
-     </li>
-     <li class="nav-item">
-       <a class="nav-link" href="#Inscription">Inscription</a>
-     </li>
-     <li class="nav-item">
-       <a class="nav-link" href="Contact.html">Contact</a>
-     </li>
-
-     <li class="nav-item">
-       <a class="nav-link" href="#Galerie">Galerie</a>
-     </li>
-     <li class="nav-item">
-       <a class="nav-link" href="#Evenement">Evenement</a>
-     </li>
-     
-   </ul>
- </div>
- </nav>
-  </header>
+	
 <div class="wrapper">
   <div class="title">
     <h1>Contactez Nous</h1>
@@ -59,6 +25,7 @@
     <div class="msg">
       <textarea placeholder="Message"></textarea>
       <div class="btn">Envoyer</div>
+      <div class="btn1">Retour</div>
     </div>
   </div>
 </div>
