--- a/inscription.html
+++ b/inscription.html
@@ -1,59 +1,91 @@
 <!DOCTYPE html>
-<html lang="fr">
-<head>
-    <meta charset="UTF-8">
+<!-- Brocante Team -->
+<html lang="fr" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    
+    <link rel="stylesheet" href="inscription.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" >
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" ></script>
-   <link rel="stylesheet" href="inscription.css">
-    <title>Inscruption</title>
-</head>
-<body>
-    <div class="container">
-        <div class="class-row">
-            <div class="col-md-7">
-                <h1 class="text-left">Formulaire d'inscription</h1>
-                <p class="text-left">Lorem ipsum dolor sit amet consectetur
-                     adipisicing elit. Eligendi, adipisci. Tempore repudiandae 
-                     enim quasi libero est, quidem, sint molestiae pariatur dolor
-                      cumque culpa blanditiis
-                     quo assumenda laboriosam reiciendis repellendus inventore?</p>
-            </div> 
-            <div class="col-md-5">
-                <!--faire 2 colonne de 6 -->
-                <div class="row">
-                     <div class="col-md-6">
-                        <h3 class="text-left">Inscription</h3>
-                     </div>
-                     <div class="col-md-6">
-                        <span class="glyphicon glyphicon-pencil"></span> 
-                    </div>
-                </div>
-                <!--fin-->
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="title-text">
+        <div class="title login">
+Connexion </div>
+<div class="title signup">
+Inscription</div>
+</div>
+<div class="form-container">
+        <div class="slide-controls">
+          <input type="radio" name="slide" id="login" checked>
+          <input type="radio" name="slide" id="signup">
+          <label for="login" class="slide login">Inscription</label>
+          <label for="signup" class="slide signup">Connexion</label>
+          <div class="slider-tab">
+</div>
+</div>
+<div class="form-inner">
+          <form action="#" class="login">
+            <div class="field">
+              <input type="text" placeholder="Email " required>
+            </div>
+<div class="field">
+              <input type="password" placeholder="Password" required>
+            </div>
+<div class="pass-link">
+<a href="#">Mot de Passe Oublié?</a></div>
+<div class="field btn">
+              <div class="btn-layer">
+</div>
+<input type="submit" value="Connexion">
+            </div>
+<div class="signup-link">
+Pas inscrit ? <a href="">Faites le!</a></div>
+<!--Mon bouton retour à l'acceil-->
+<a href="index.html" type="button" class="cta">Retour accueil</a>
+<!--fin bouton retour à l'acceil-->
+</form>
+<form action="#" class="signup">
+            <div class="field">
+              <input type="text" placeholder="Email " required>
+            </div>
+<div class="field">
+              <input type="password" placeholder="Password" required>
+            </div>
+<div class="field">
+              <input type="password" placeholder="Confirmer password" required>
+            </div>
+<div class="field btn">
+              <div class="btn-layer">
+</div>
+<input type="submit" value="inscription">
+            </div>
+            <!--Mon bouton retour à l'acceil-->
+<a href="index.html" type="button" class="cta">Retour accueil</a>
+<!--fin bouton retour à l'acceil-->
+</form>
+</div>
+</div>
+</div>
+<script>
+      const loginText = document.querySelector(".title-text .login");
+      const loginForm = document.querySelector("form.login");
+      const loginBtn = document.querySelector("label.login");
+      const signupBtn = document.querySelector("label.signup");
+      const signupLink = document.querySelector("form .signup-link a");
+      signupBtn.onclick = (()=>{
+        loginForm.style.marginLeft = "-50%";
+        loginText.style.marginLeft = "-50%";
+      });
+      loginBtn.onclick = (()=>{
+        loginForm.style.marginLeft = "0%";
+        loginText.style.marginLeft = "0%";
+      });
+      signupLink.onclick = (()=>{
+        signupBtn.click();
+        return false;
+      });
+    </script>
 
-                  <!--faire une autre pour des textbox et les label -->
-                  <div class="row">
-                      <label for="Nom"  class="label col-md-2 control-label">Nom</label>
-                      <div class="col-md-10">
-                          <input type="text" class="form-control" name="Nom" placeholder="Nom" >
-                      </div>
-                  </div>
-                  <div class="row">
-                    <label for="Email"  class="label col-md-2 control-label">Email</label>
-                    <div class="col-md-10">
-                        <input type="text" class="form-control" name="Email" placeholder="Email" >
-                    </div>   
-                </div>
-                <div class="row">
-                    <label for="password"  class="label col-md-2 control-label">Password</label>
-                    <div class="col-md-10">
-                        <input type="password" class="form-control" name="password" placeholder="password" >
-                        <input type="checkbox"> <small>Se souvenir de moi</small> 
-                    </div>   
-                </div>
-                    <!--fin-->
-            </div>       
-        </div>
-    </div>
-</body>
+  </body>
 </html>
