--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -19,7 +19,7 @@
 
  <div>
      <h1> Gallerie de la Grande Brocantr et Marché aux Puces</h1>
-     <a href="index.html" type="button" class="cta">Retour Accueil</a>
+     <a href="index1.html" type="button" class="cta">Retour Accueil</a>
 
  </div>
   <div class="container">
