--- a/inscription.html
+++ b/inscription.html
@@ -42,7 +42,7 @@ Inscription</div>
 <div class="signup-link">
 Pas inscrit ? <a href="">Faites le!</a></div>
 <!--Mon bouton retour à l'acceil-->
-<a href="index.html" type="button" class="cta">Retour accueil</a>
+<a href="index1.html" type="button" class="cta">Retour accueil</a>
 <!--fin bouton retour à l'acceil-->
 </form>
 <form action="#" class="signup">
@@ -61,7 +61,7 @@ Pas inscrit ? <a href="">Faites le!</a></div>
 <input type="submit" value="inscription">
             </div>
             <!--Mon bouton retour à l'acceil-->
-<a href="index.html" type="button" class="cta">Retour accueil</a>
+<a href="index1.html" type="button" class="cta">Retour accueil</a>
 <!--fin bouton retour à l'acceil-->
 </form>
 </div>
