@gilles integration api

--- a/API-dev/index.html
+++ b/API-dev/index.html
@@ -58,7 +58,7 @@
                 }
             }
 
-            xmlhttp.open("GET", "http://192.168.0.7/demo/osm/api/brocante/liste_simple.php");
+            //xmlhttp.open("GET", "http://192.168.0.7/demo/osm/api/brocante/liste_simple.php");
 
             xmlhttp.send(null);
         </script>
