--- a/grid-gallery.html
+++ b/grid-gallery.html
@@ -18,7 +18,7 @@
   <!-- End Header -->
 
  <div>
-     <h1> Gallerie de la Grande Brocantr et Marché aux Puces</h1>
+     <h1> Gallerie de la Grande Brocante et Marché aux Puces</h1>
      <a href="index.html" type="button" class="cta">Retour Accueil</a>
 
  </div>
